[package]
name = "hsync-os"
version = "0.1.0"
authors = ["Juho Artturi Hemminki"]
edition = "2021"

[lib]
name = "hsync"
path = "src/lib.rs"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
x86_64 = "0.14"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.release]
panic = "abort"
lto = true

